@@ -14,18 +14,16 @@ import com.example.mangacatalog.repository.ComicRepository;
 import com.example.mangacatalog.repository.GenreRepository;
 import com.example.mangacatalog.repository.PublisherRepository;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -34,149 +32,196 @@ class ComicBulkServiceTest {
 
     @Mock
     private ComicRepository comicRepository;
-
     @Mock
     private AuthorRepository authorRepository;
-
     @Mock
     private PublisherRepository publisherRepository;
-
     @Mock
     private GenreRepository genreRepository;
-
     @Mock
     private ComicMapper comicMapper;
-
     @Mock
     private ApiCacheManager cacheManager;
 
     @InjectMocks
     private ComicBulkService comicBulkService;
 
-    private Author author;
-    private Publisher publisher;
-    private Genre genre;
+    private Author testAuthor;
+    private Publisher testPublisher;
+    private Genre testGenre;
     private Comic savedComic;
-    private ComicDto comicDto;
+    private ComicDto testComicDto;
 
     @BeforeEach
     void setUp() {
-        author = new Author();
-        author.setId(1L);
-        author.setName("Author");
+        testAuthor = new Author();
+        testAuthor.setId(1L);
+        testAuthor.setName("Кэнтаро Миура");
 
-        publisher = new Publisher();
-        publisher.setId(1L);
-        publisher.setName("Publisher");
+        testPublisher = new Publisher();
+        testPublisher.setId(1L);
+        testPublisher.setName("Hakusensha");
 
-        genre = new Genre();
-        genre.setId(1L);
-        genre.setName("Action");
+        testGenre = new Genre();
+        testGenre.setId(1L);
+        testGenre.setName("Тёмное фэнтези");
 
         savedComic = new Comic();
-        savedComic.setId(1L);
-        savedComic.setTitle("Bulk Comic");
+        savedComic.setId(10L);
+        savedComic.setTitle("Берсерк");
 
-        comicDto = new com.example.mangacatalog.dto.ComicDto(
-            1L, "Bulk Comic", 2000, null, null, null);
+        testComicDto = new ComicDto(
+            10L, "Берсерк", 1989,
+            null, null, Set.of()
+        );
     }
 
     @Test
-    void createBulk_whenAllValid_returnsResult() {
-        ComicRequest request = new ComicRequest("Bulk Comic", 2000, 1L, 1L, Set.of(1L));
+    @DisplayName("createBulk — успех, один комикс")
+    void createBulk_singleComic_success() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк", 1989, 1L, 1L, Set.of(1L));
 
-        when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
-        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(testPublisher));
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
         when(comicRepository.save(any(Comic.class))).thenReturn(savedComic);
-        when(comicMapper.toDto(savedComic)).thenReturn(comicDto);
+        when(comicMapper.toDto(savedComic)).thenReturn(testComicDto);
 
         BulkComicResult result = comicBulkService.createBulk(List.of(request));
 
-        assertThat(result.successCount()).isEqualTo(1);
-        assertThat(result.created()).hasSize(1);
+        assertNotNull(result);
+        assertEquals(1, result.successCount());
+        assertEquals(1, result.created().size());
+        assertEquals("Берсерк", result.created().get(0).title());
         verify(cacheManager).invalidate();
     }
 
     @Test
-    void createBulk_multiplePasses_returnsAllCreated() {
-        ComicRequest req1 = new ComicRequest("Comic 1", 2001, 1L, 1L, Set.of(1L));
-        ComicRequest req2 = new ComicRequest("Comic 2", 2002, 1L, 1L, Set.of(1L));
+    @DisplayName("createBulk — успех, несколько комиксов")
+    void createBulk_multipleComics_success() {
+        ComicRequest req1 = new ComicRequest("Берсерк", 1989, 1L, 1L, Set.of(1L));
+        ComicRequest req2 = new ComicRequest("One Piece", 1997, 1L, 1L, Set.of(1L));
 
-        Comic saved1 = new Comic();
-        saved1.setId(1L);
         Comic saved2 = new Comic();
-        saved2.setId(2L);
+        saved2.setId(11L);
+        saved2.setTitle("One Piece");
+        ComicDto dto2 = new ComicDto(11L, "One Piece", 1997, null, null, Set.of());
 
-        ComicDto dto1 = new ComicDto(1L, "Comic 1", 2001, null, null, null);
-        ComicDto dto2 = new ComicDto(2L, "Comic 2", 2002, null, null, null);
-
-        when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
-        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
-        when(genreRepository.findAllById(any())).thenReturn(List.of(genre));
-        when(comicRepository.save(any(Comic.class))).thenReturn(saved1, saved2);
-        when(comicMapper.toDto(saved1)).thenReturn(dto1);
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(testPublisher));
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
+        when(comicRepository.save(any(Comic.class)))
+            .thenReturn(savedComic)
+            .thenReturn(saved2);
+        when(comicMapper.toDto(savedComic)).thenReturn(testComicDto);
         when(comicMapper.toDto(saved2)).thenReturn(dto2);
 
         BulkComicResult result = comicBulkService.createBulk(List.of(req1, req2));
 
-        assertThat(result.successCount()).isEqualTo(2);
+        assertEquals(2, result.successCount());
+        assertEquals(2, result.created().size());
+        verify(comicRepository, times(2)).save(any(Comic.class));
         verify(cacheManager).invalidate();
     }
 
     @Test
-    void createBulk_whenAuthorNotFound_throwsIllegalArgumentException() {
-        ComicRequest request = new ComicRequest("Comic", 2000, 99L, 1L, Set.of(1L));
+    @DisplayName("createBulk — автор не найден, бросает IllegalArgumentException")
+    void createBulk_authorNotFound() {
+        ComicRequest request = new ComicRequest(
+            "Тест", 2020, 99L, 1L, Set.of(1L));
+
         when(authorRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> comicBulkService.createBulk(List.of(request)))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessageContaining("автор");
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            () -> comicBulkService.createBulk(List.of(request)));
+
+        assertTrue(ex.getMessage().contains("Элемент [0]"));
+        verify(comicRepository, never()).save(any());
     }
 
     @Test
-    void createBulk_whenPublisherNotFound_throwsIllegalArgumentException() {
-        ComicRequest request = new ComicRequest("Comic", 2000, 1L, 99L, Set.of(1L));
-        when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
+    @DisplayName("createBulk — издатель не найден, бросает IllegalArgumentException")
+    void createBulk_publisherNotFound() {
+        ComicRequest request = new ComicRequest(
+            "Тест", 2020, 1L, 99L, Set.of(1L));
+
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
         when(publisherRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> comicBulkService.createBulk(List.of(request)))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessageContaining("издатель");
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            () -> comicBulkService.createBulk(List.of(request)));
+
+        assertTrue(ex.getMessage().contains("Элемент [0]"));
+        verify(comicRepository, never()).save(any());
     }
 
     @Test
-    void createBulk_whenGenreNotFound_throwsIllegalArgumentException() {
-        ComicRequest request = new ComicRequest("Comic", 2000, 1L, 1L, Set.of(1L, 99L));
-        when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
-        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
-        // Only one genre found, two requested
-        when(genreRepository.findAllById(any())).thenReturn(List.of(genre));
+    @DisplayName("createBulk — жанр не найден, бросает IllegalArgumentException")
+    void createBulk_genreNotFound() {
+        ComicRequest request = new ComicRequest(
+            "Тест", 2020, 1L, 1L, Set.of(99L));
 
-        assertThatThrownBy(() -> comicBulkService.createBulk(List.of(request)))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessageContaining("жанры");
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(testPublisher));
+        when(genreRepository.findAllById(Set.of(99L))).thenReturn(Collections.emptyList());
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            () -> comicBulkService.createBulk(List.of(request)));
+
+        assertTrue(ex.getMessage().contains("Элемент [0]"));
+        verify(comicRepository, never()).save(any());
     }
 
     @Test
-    void createBulk_whenGenreIdsNull_throwsIllegalArgumentException() {
-        ComicRequest request = new ComicRequest("Comic", 2000, 1L, 1L, null);
-        when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
-        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
+    @DisplayName("createBulk — пустые жанры, бросает IllegalArgumentException")
+    void createBulk_emptyGenres() {
+        ComicRequest request = new ComicRequest(
+            "Тест", 2020, 1L, 1L, Collections.emptySet());
 
-        assertThatThrownBy(() -> comicBulkService.createBulk(List.of(request)))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessageContaining("жанров не может быть пустым");
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(testPublisher));
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            () -> comicBulkService.createBulk(List.of(request)));
+
+        assertTrue(ex.getMessage().contains("список жанров не может быть пустым"));
     }
 
     @Test
-    void createBulk_whenGenreIdsEmpty_throwsIllegalArgumentException() {
-        ComicRequest request = new ComicRequest("Comic", 2000, 1L, 1L, Set.of());
-        when(authorRepository.findById(1L)).thenReturn(Optional.of(author));
-        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
+    @DisplayName("createBulk — второй элемент невалиден, первый не сохраняется (транзакция)")
+    void createBulk_secondElementFails() {
+        ComicRequest req1 = new ComicRequest("Берсерк", 1989, 1L, 1L, Set.of(1L));
+        ComicRequest req2 = new ComicRequest("Тест", 2020, 99L, 1L, Set.of(1L));
 
-        assertThatThrownBy(() -> comicBulkService.createBulk(List.of(request)))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessageContaining("жанров не может быть пустым");
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
+        when(authorRepository.findById(99L)).thenReturn(Optional.empty());
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(testPublisher));
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
+        when(comicRepository.save(any(Comic.class))).thenReturn(savedComic);
+        when(comicMapper.toDto(savedComic)).thenReturn(testComicDto);
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            () -> comicBulkService.createBulk(List.of(req1, req2)));
+
+        assertTrue(ex.getMessage().contains("Элемент [1]"));
+    }
+
+    @Test
+    @DisplayName("createBulk — несколько жанров найдены частично")
+    void createBulk_partialGenresFound() {
+        ComicRequest request = new ComicRequest(
+            "Тест", 2020, 1L, 1L, Set.of(1L, 2L));
+
+        when(authorRepository.findById(1L)).thenReturn(Optional.of(testAuthor));
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(testPublisher));
+        // Запрошены 2 жанра, найден только 1
+        when(genreRepository.findAllById(Set.of(1L, 2L))).thenReturn(List.of(testGenre));
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            () -> comicBulkService.createBulk(List.of(request)));
+
+        assertTrue(ex.getMessage().contains("не найдены"));
+        verify(comicRepository, never()).save(any());
     }
 }
