@@ -18,6 +18,7 @@ import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Path;
 import jakarta.validation.Validator;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -27,9 +28,9 @@ import org.springframework.data.domain.Pageable;
 
 import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -37,415 +38,434 @@ class ComicServiceTest {
 
     @Mock
     private ComicRepository comicRepository;
-
     @Mock
     private PublisherRepository publisherRepository;
-
     @Mock
     private AuthorRepository authorRepository;
-
     @Mock
     private GenreRepository genreRepository;
-
     @Mock
     private ComicMapper comicMapper;
-
     @Mock
     private ApiCacheManager cacheManager;
-
     @Mock
     private Validator validator;
 
     @InjectMocks
     private ComicService comicService;
 
-    private Comic comic;
-    private ComicDto comicDto;
-    private Author author;
-    private Publisher publisher;
-    private Genre genre;
+    private Author testAuthor;
+    private Publisher testPublisher;
+    private Genre testGenre;
+    private Comic testComic;
+    private ComicDto testComicDto;
 
     @BeforeEach
     void setUp() {
-        author = new Author();
-        author.setId(1L);
-        author.setName("Author");
+        testAuthor = new Author();
+        testAuthor.setId(1L);
+        testAuthor.setName("Кэнтаро Миура");
 
-        publisher = new Publisher();
-        publisher.setId(1L);
-        publisher.setName("Publisher");
+        testPublisher = new Publisher();
+        testPublisher.setId(1L);
+        testPublisher.setName("Hakusensha");
 
-        genre = new Genre();
-        genre.setId(1L);
-        genre.setName("Action");
+        testGenre = new Genre();
+        testGenre.setId(1L);
+        testGenre.setName("Тёмное фэнтези");
 
-        comic = new Comic();
-        comic.setId(1L);
-        comic.setTitle("Test Comic");
-        comic.setReleaseYear(2000);
-        comic.setAuthor(author);
-        comic.setPublisher(publisher);
-        comic.setGenres(Set.of(genre));
+        testComic = new Comic();
+        testComic.setId(1L);
+        testComic.setTitle("Берсерк");
+        testComic.setReleaseYear(1989);
+        testComic.setAuthor(testAuthor);
+        testComic.setPublisher(testPublisher);
+        testComic.setGenres(Set.of(testGenre));
 
-        comicDto = new ComicDto(1L, "Test Comic", 2000,
-            new AuthorDto(1L, "Author"),
-            new PublisherDto(1L, "Publisher"),
-            Set.of(new GenreDto(1L, "Action")));
+        testComicDto = new ComicDto(
+            1L, "Берсерк", 1989,
+            new AuthorDto(1L, "Кэнтаро Миура"),
+            new PublisherDto(1L, "Hakusensha"),
+            Set.of(new GenreDto(1L, "Тёмное фэнтези"))
+        );
     }
 
-    // ========== getAll() ==========
+    // ─── Вспомогательные методы ───────────────────────────────────────────────
+
+    /**
+     * Настраивает validator.validate() чтобы возвращал пустой Set (нет ошибок аннотаций).
+     * Вызывать перед операциями create/update/patch/delete.
+     */
+    @SuppressWarnings("unchecked")
+    private void noValidationErrors() {
+        when(validator.validate(any())).thenReturn(Collections.emptySet());
+    }
+
+    /**
+     * Настраивает мок-нарушение валидации с заданным полем и сообщением.
+     */
+    @SuppressWarnings("unchecked")
+    private void withValidationError(String field, String message) {
+        ConstraintViolation<Object> violation = mock(ConstraintViolation.class);
+        Path path = mock(Path.class);
+        when(path.toString()).thenReturn(field);
+        when(violation.getPropertyPath()).thenReturn(path);
+        when(violation.getMessage()).thenReturn(message);
+        when(validator.validate(any())).thenReturn(Set.of(violation));
+    }
+
+    // ─── getAll ───────────────────────────────────────────────────────────────
 
     @Test
-    void getAll_whenCacheHit_returnsCached() {
-        List<ComicDto> cached = List.of(comicDto);
+    @DisplayName("getAll — из кэша")
+    void getAll_fromCache() {
+        List<ComicDto> cached = List.of(testComicDto);
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(cached);
 
         List<ComicDto> result = comicService.getAll();
 
-        assertThat(result).isEqualTo(cached);
+        assertEquals(cached, result);
         verify(comicRepository, never()).findAll();
     }
 
     @Test
-    void getAll_whenCacheMiss_fetchesAndCaches() {
+    @DisplayName("getAll — кэш пуст, запрос к БД")
+    void getAll_cacheMiss() {
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findAll()).thenReturn(List.of(comic));
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        when(comicRepository.findAll()).thenReturn(List.of(testComic));
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
         List<ComicDto> result = comicService.getAll();
 
-        assertThat(result).containsExactly(comicDto);
+        assertEquals(1, result.size());
+        assertEquals("Берсерк", result.get(0).title());
         verify(cacheManager).put(any(ApiCacheKey.class), any());
     }
 
-    // ========== getById() ==========
+    @Test
+    @DisplayName("getAll — пустой список")
+    void getAll_empty() {
+        when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
+        when(comicRepository.findAll()).thenReturn(Collections.emptyList());
+
+        assertTrue(comicService.getAll().isEmpty());
+    }
+
+    // ─── getById ──────────────────────────────────────────────────────────────
 
     @Test
-    void getById_whenCacheHit_returnsCached() {
-        when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(comicDto);
+    @DisplayName("getById — из кэша")
+    void getById_fromCache() {
+        when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(testComicDto);
 
         ComicDto result = comicService.getById(1L);
 
-        assertThat(result).isEqualTo(comicDto);
+        assertEquals(testComicDto, result);
         verify(comicRepository, never()).findById(any());
     }
 
     @Test
-    void getById_whenCacheMiss_fetchesAndCaches() {
+    @DisplayName("getById — кэш пуст, успех")
+    void getById_cacheMiss_success() {
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        when(comicRepository.findById(1L)).thenReturn(Optional.of(testComic));
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
         ComicDto result = comicService.getById(1L);
 
-        assertThat(result).isEqualTo(comicDto);
-        verify(cacheManager).put(any(ApiCacheKey.class), eq(comicDto));
+        assertNotNull(result);
+        assertEquals("Берсерк", result.title());
+        assertEquals(1989, result.releaseYear());
+        verify(cacheManager).put(any(ApiCacheKey.class), any());
     }
 
     @Test
-    void getById_whenNotFound_throwsException() {
+    @DisplayName("getById — комикс не найден")
+    void getById_notFound() {
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
         when(comicRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> comicService.getById(99L))
-            .isInstanceOf(ResourceNotFoundException.class)
-            .hasMessageContaining("99");
+        assertThrows(ResourceNotFoundException.class,
+            () -> comicService.getById(99L));
     }
 
-    // ========== searchByTitle() ==========
+    // ─── searchByTitle ────────────────────────────────────────────────────────
 
     @Test
-    void searchByTitle_whenCacheHit_returnsCached() {
-        List<ComicDto> cached = List.of(comicDto);
+    @DisplayName("searchByTitle — из кэша")
+    void searchByTitle_fromCache() {
+        List<ComicDto> cached = List.of(testComicDto);
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(cached);
 
-        List<ComicDto> result = comicService.searchByTitle("Test");
+        List<ComicDto> result = comicService.searchByTitle("Берс");
 
-        assertThat(result).isEqualTo(cached);
+        assertEquals(cached, result);
+        verify(comicRepository, never()).findByTitleContainingIgnoreCase(any());
     }
 
     @Test
-    void searchByTitle_whenCacheMiss_fetchesAndCaches() {
+    @DisplayName("searchByTitle — кэш пуст, нашёл результаты")
+    void searchByTitle_cacheMiss_found() {
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findByTitleContainingIgnoreCase("Test"))
-            .thenReturn(List.of(comic));
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        when(comicRepository.findByTitleContainingIgnoreCase("Берс"))
+            .thenReturn(List.of(testComic));
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
-        List<ComicDto> result = comicService.searchByTitle("Test");
+        List<ComicDto> result = comicService.searchByTitle("Берс");
 
-        assertThat(result).containsExactly(comicDto);
+        assertEquals(1, result.size());
+        assertEquals("Берсерк", result.get(0).title());
         verify(cacheManager).put(any(ApiCacheKey.class), any());
     }
 
-    // ========== getComicsByAuthor() ==========
+    @Test
+    @DisplayName("searchByTitle — ничего не найдено")
+    void searchByTitle_empty() {
+        when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
+        when(comicRepository.findByTitleContainingIgnoreCase("xyz"))
+            .thenReturn(Collections.emptyList());
+
+        assertTrue(comicService.searchByTitle("xyz").isEmpty());
+    }
+
+    // ─── getComicsByAuthor ────────────────────────────────────────────────────
 
     @Test
-    void getComicsByAuthor_whenCacheHit_returnsCached() {
-        List<ComicDto> cached = List.of(comicDto);
+    @DisplayName("getComicsByAuthor — из кэша")
+    void getComicsByAuthor_fromCache() {
+        List<ComicDto> cached = List.of(testComicDto);
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(cached);
 
         List<ComicDto> result = comicService.getComicsByAuthor(1L);
 
-        assertThat(result).isEqualTo(cached);
+        assertEquals(cached, result);
+        verify(comicRepository, never()).findByAuthorId(any());
     }
 
     @Test
-    void getComicsByAuthor_whenCacheMiss_fetchesAndCaches() {
+    @DisplayName("getComicsByAuthor — кэш пуст, запрос к БД")
+    void getComicsByAuthor_cacheMiss() {
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findByAuthorId(1L)).thenReturn(List.of(comic));
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        when(comicRepository.findByAuthorId(1L)).thenReturn(List.of(testComic));
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
         List<ComicDto> result = comicService.getComicsByAuthor(1L);
 
-        assertThat(result).containsExactly(comicDto);
+        assertEquals(1, result.size());
         verify(cacheManager).put(any(ApiCacheKey.class), any());
     }
 
-    // ========== searchComplex() ==========
+    // ─── searchComplex (JPQL) ─────────────────────────────────────────────────
 
     @Test
-    void searchComplex_whenCacheHit_returnsCached() {
-        List<ComicDto> cached = List.of(comicDto);
+    @DisplayName("searchComplex — из кэша")
+    void searchComplex_fromCache() {
+        List<ComicDto> cached = List.of(testComicDto);
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(cached);
 
-        List<ComicDto> result = comicService.searchComplex("Action", 2000, 0, 5, false);
+        List<ComicDto> result = comicService.searchComplex("Сёнэн", 2000, 0, 5, false);
 
-        assertThat(result).isEqualTo(cached);
+        assertEquals(cached, result);
+        verify(comicRepository, never()).findByGenreAndYearJpql(any(), any(), any());
     }
 
     @Test
-    void searchComplex_whenCacheMiss_useJpql() {
+    @DisplayName("searchComplex — JPQL, кэш пуст")
+    void searchComplex_jpql_cacheMiss() {
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
         when(comicRepository.findByGenreAndYearJpql(
-            eq("Action"), eq(2000), any(Pageable.class)))
-            .thenReturn(List.of(comic));
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+            eq("Сёнэн"), eq(2000), any(Pageable.class)))
+            .thenReturn(List.of(testComic));
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
-        List<ComicDto> result = comicService.searchComplex("Action", 2000, 0, 5, false);
+        List<ComicDto> result = comicService.searchComplex("Сёнэн", 2000, 0, 5, false);
 
-        assertThat(result).containsExactly(comicDto);
+        assertEquals(1, result.size());
         verify(cacheManager).put(any(ApiCacheKey.class), any());
     }
 
     @Test
-    void searchComplex_whenCacheMiss_useNative_withSingleGenre() {
+    @DisplayName("searchComplex — Native, кэш пуст")
+    void searchComplex_native_cacheMiss() {
         ComicNativeProjection proj = mock(ComicNativeProjection.class);
         when(proj.getId()).thenReturn(1L);
-        when(proj.getTitle()).thenReturn("Test Comic");
-        when(proj.getReleaseYear()).thenReturn(2000);
+        when(proj.getTitle()).thenReturn("Берсерк");
+        when(proj.getReleaseYear()).thenReturn(1989);
         when(proj.getAuthorId()).thenReturn(1L);
-        when(proj.getAuthorName()).thenReturn("Author");
+        when(proj.getAuthorName()).thenReturn("Кэнтаро Миура");
         when(proj.getPublisherId()).thenReturn(1L);
-        when(proj.getPublisherName()).thenReturn("Publisher");
+        when(proj.getPublisherName()).thenReturn("Hakusensha");
         when(proj.getGenreIds()).thenReturn("1");
-        when(proj.getGenreNames()).thenReturn("Action");
+        when(proj.getGenreNames()).thenReturn("Тёмное фэнтези");
 
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
         when(comicRepository.findByGenreAndYearNative(
-            eq("Action"), eq(2000), any(Pageable.class)))
+            eq("Тёмное фэнтези"), eq(1989), any(Pageable.class)))
             .thenReturn(List.of(proj));
 
-        List<ComicDto> result = comicService.searchComplex("Action", 2000, 0, 5, true);
+        List<ComicDto> result = comicService.searchComplex("Тёмное фэнтези", 1989, 0, 5, true);
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).title()).isEqualTo("Test Comic");
-        assertThat(result.get(0).genres()).hasSize(1);
-        assertThat(result.get(0).author()).isNotNull();
-        assertThat(result.get(0).publisher()).isNotNull();
+        assertEquals(1, result.size());
+        assertEquals("Берсерк", result.get(0).title());
+        verify(cacheManager).put(any(ApiCacheKey.class), any());
     }
 
     @Test
-    void searchComplex_useNative_withMultipleGenres_coversLoop() {
-        // Покрывает цикл for (int i = 0; i < ids.length; i++) с несколькими жанрами
-        ComicNativeProjection proj = mock(ComicNativeProjection.class);
-        when(proj.getId()).thenReturn(3L);
-        when(proj.getTitle()).thenReturn("Multi Genre Comic");
-        when(proj.getReleaseYear()).thenReturn(2005);
-        when(proj.getAuthorId()).thenReturn(1L);
-        when(proj.getAuthorName()).thenReturn("Author");
-        when(proj.getPublisherId()).thenReturn(1L);
-        when(proj.getPublisherName()).thenReturn("Publisher");
-        when(proj.getGenreIds()).thenReturn("1,2");
-        when(proj.getGenreNames()).thenReturn("Action, Horror");
-
-        when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findByGenreAndYearNative(any(), any(), any(Pageable.class)))
-            .thenReturn(List.of(proj));
-
-        List<ComicDto> result = comicService.searchComplex("Action", 2000, 0, 5, true);
-
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).genres()).hasSize(2);
-    }
-
-    @Test
-    void searchComplex_nativeProjection_withNullAuthorAndPublisher() {
-        // Покрывает ветки: authorId == null → author = null, publisherId == null → publisher = null
+    @DisplayName("searchComplex — Native, null поля автора и издателя")
+    void searchComplex_native_nullAuthorAndPublisher() {
         ComicNativeProjection proj = mock(ComicNativeProjection.class);
         when(proj.getId()).thenReturn(2L);
-        when(proj.getTitle()).thenReturn("No Author Comic");
-        when(proj.getReleaseYear()).thenReturn(1990);
-        when(proj.getAuthorId()).thenReturn(null);
-        when(proj.getPublisherId()).thenReturn(null);
-        when(proj.getGenreIds()).thenReturn(null);
-        // getGenreNames() НЕ stubируем — не вызывается из-за short-circuit &&
-
-        when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findByGenreAndYearNative(any(), any(), any(Pageable.class)))
-            .thenReturn(List.of(proj));
-
-        List<ComicDto> result = comicService.searchComplex(null, null, 0, 5, true);
-
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).author()).isNull();
-        assertThat(result.get(0).publisher()).isNull();
-        assertThat(result.get(0).genres()).isEmpty();
-    }
-
-    @Test
-    void searchComplex_nativeProjection_genreIdsNotNull_butGenreNamesNull() {
-        // Покрывает ветку: genreIds != null && genreNames == null → блок if не выполняется
-        ComicNativeProjection proj = mock(ComicNativeProjection.class);
-        when(proj.getId()).thenReturn(4L);
-        when(proj.getTitle()).thenReturn("Comic");
+        when(proj.getTitle()).thenReturn("Без автора");
         when(proj.getReleaseYear()).thenReturn(2000);
         when(proj.getAuthorId()).thenReturn(null);
         when(proj.getPublisherId()).thenReturn(null);
-        when(proj.getGenreIds()).thenReturn("1");
+        when(proj.getGenreIds()).thenReturn(null);
         when(proj.getGenreNames()).thenReturn(null);
 
         when(cacheManager.get(any(ApiCacheKey.class))).thenReturn(null);
-        when(comicRepository.findByGenreAndYearNative(any(), any(), any(Pageable.class)))
+        when(comicRepository.findByGenreAndYearNative(any(), any(), any()))
             .thenReturn(List.of(proj));
 
-        List<ComicDto> result = comicService.searchComplex("Action", 2000, 0, 5, true);
+        List<ComicDto> result = comicService.searchComplex("Жанр", 1999, 0, 5, true);
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).genres()).isEmpty();
+        assertEquals(1, result.size());
+        assertNull(result.get(0).author());
+        assertNull(result.get(0).publisher());
+        assertTrue(result.get(0).genres().isEmpty());
     }
 
-    // ========== create() ==========
+    // ─── create ───────────────────────────────────────────────────────────────
 
     @Test
-    void create_whenValid_savesAndInvalidatesCache() {
-        ComicRequest request = new ComicRequest("Test Comic", 2000, 1L, 1L, Set.of(1L));
+    @DisplayName("create — успех")
+    void create_success() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк", 1989, 1L, 1L, Set.of(1L));
 
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
+        noValidationErrors();
         when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
+        when(authorRepository.getReferenceById(1L)).thenReturn(testAuthor);
         when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        when(publisherRepository.getReferenceById(1L)).thenReturn(testPublisher);
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
+        when(comicRepository.save(any(Comic.class))).thenReturn(testComic);
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
         ComicDto result = comicService.create(request);
 
-        assertThat(result).isEqualTo(comicDto);
+        assertNotNull(result);
+        assertEquals("Берсерк", result.title());
+        verify(comicRepository).save(any(Comic.class));
         verify(cacheManager).invalidate();
     }
 
     @Test
-    void create_whenAuthorNotFound_throwsValidationException() {
-        ComicRequest request = new ComicRequest("Test", 2000, 99L, 1L, Set.of(1L));
+    @DisplayName("create — автор не найден, бросает ValidationException")
+    void create_authorNotFound_throwsValidation() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк", 1989, 99L, 1L, Set.of(1L));
 
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
+        noValidationErrors();
         when(authorRepository.existsById(99L)).thenReturn(false);
         when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
+        when(publisherRepository.getReferenceById(1L)).thenReturn(testPublisher);
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
 
-        assertThatThrownBy(() -> comicService.create(request))
-            .isInstanceOf(ValidationException.class);
+        assertThrows(ValidationException.class,
+            () -> comicService.create(request));
+        verify(comicRepository, never()).save(any());
     }
 
     @Test
-    void create_whenPublisherNotFound_throwsValidationException() {
-        ComicRequest request = new ComicRequest("Test", 2000, 1L, 99L, Set.of(1L));
+    @DisplayName("create — издатель не найден, бросает ValidationException")
+    void create_publisherNotFound_throwsValidation() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк", 1989, 1L, 99L, Set.of(1L));
 
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
+        noValidationErrors();
         when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
+        when(authorRepository.getReferenceById(1L)).thenReturn(testAuthor);
         when(publisherRepository.existsById(99L)).thenReturn(false);
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
 
-        assertThatThrownBy(() -> comicService.create(request))
-            .isInstanceOf(ValidationException.class);
+        assertThrows(ValidationException.class,
+            () -> comicService.create(request));
+        verify(comicRepository, never()).save(any());
     }
 
     @Test
-    void create_whenGenreNotFound_throwsValidationException() {
-        ComicRequest request = new ComicRequest("Test", 2000, 1L, 1L, Set.of(1L, 99L));
+    @DisplayName("create — жанры не найдены, бросает ValidationException")
+    void create_genresNotFound_throwsValidation() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк", 1989, 1L, 1L, Set.of(99L));
 
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
+        noValidationErrors();
         when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
+        when(authorRepository.getReferenceById(1L)).thenReturn(testAuthor);
         when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(genreRepository.findAllById(any())).thenReturn(List.of(genre));
+        when(publisherRepository.getReferenceById(1L)).thenReturn(testPublisher);
+        // Жанр не найден — возвращаем пустой список
+        when(genreRepository.findAllById(Set.of(99L))).thenReturn(Collections.emptyList());
 
-        assertThatThrownBy(() -> comicService.create(request))
-            .isInstanceOf(ValidationException.class);
+        assertThrows(ValidationException.class,
+            () -> comicService.create(request));
+        verify(comicRepository, never()).save(any());
     }
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
     @Test
-    void create_whenAnnotationValidationErrors_throwsValidationException() {
-        ComicRequest request = new ComicRequest("", 2000, 1L, 1L, Set.of(1L));
+    @DisplayName("create — нарушение аннотационной валидации, бросает ValidationException")
+    void create_annotationValidationFails() {
+        ComicRequest request = new ComicRequest(
+            "", 1989, 1L, 1L, Set.of(1L));
 
-        ConstraintViolation<Object> violation = mock(ConstraintViolation.class);
-        Path path = mock(Path.class);
-        when(path.toString()).thenReturn("title");
-        when(violation.getPropertyPath()).thenReturn(path);
-        when(violation.getMessage()).thenReturn("must not be blank");
+        withValidationError("title", "Название комикса не может быть пустым");
 
-        Set violations = Set.of(violation);
-        when(validator.validate(any())).thenReturn(violations);
-        when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
-        when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(genreRepository.findAllById(any())).thenReturn(List.of(genre));
-
-        assertThatThrownBy(() -> comicService.create(request))
-            .isInstanceOf(ValidationException.class);
+        assertThrows(ValidationException.class,
+            () -> comicService.create(request));
+        verify(comicRepository, never()).save(any());
     }
 
-    // ========== update() ==========
+    // ─── update ───────────────────────────────────────────────────────────────
 
     @Test
-    void update_whenComicExists_updatesAndInvalidates() {
-        ComicRequest request = new ComicRequest("Updated", 2001, 1L, 1L, Set.of(1L));
+    @DisplayName("update — успех")
+    void update_success() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк обновлён", 1990, 1L, 1L, Set.of(1L));
 
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
+        noValidationErrors();
+        when(comicRepository.findById(1L)).thenReturn(Optional.of(testComic));
         when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
+        when(authorRepository.getReferenceById(1L)).thenReturn(testAuthor);
         when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        when(publisherRepository.getReferenceById(1L)).thenReturn(testPublisher);
+        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(testGenre));
+        when(comicRepository.save(any(Comic.class))).thenReturn(testComic);
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
         ComicDto result = comicService.update(1L, request);
 
-        assertThat(result).isEqualTo(comicDto);
+        assertNotNull(result);
+        verify(comicRepository).save(any(Comic.class));
         verify(cacheManager).invalidate();
     }
 
     @Test
-    void update_whenComicNotFound_throwsException() {
+    @DisplayName("update — комикс не найден")
+    void update_comicNotFound() {
+        ComicRequest request = new ComicRequest(
+            "Берсерк", 1989, 1L, 1L, Set.of(1L));
         when(comicRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> comicService.update(99L,
-            new ComicRequest("T", 2000, 1L, 1L, Set.of(1L))))
-            .isInstanceOf(ResourceNotFoundException.class);
+        assertThrows(ResourceNotFoundException.class,
+            () -> comicService.update(99L, request));
     }
 
-    // ========== delete() ==========
+    // ─── delete ───────────────────────────────────────────────────────────────
 
     @Test
-    void delete_whenExists_deletesAndInvalidates() {
+    @DisplayName("delete — успех")
+    void delete_success() {
         when(comicRepository.existsById(1L)).thenReturn(true);
 
         comicService.delete(1L);
@@ -455,145 +475,108 @@ class ComicServiceTest {
     }
 
     @Test
-    void delete_whenNotFound_throwsException() {
+    @DisplayName("delete — комикс не найден")
+    void delete_notFound() {
         when(comicRepository.existsById(99L)).thenReturn(false);
 
-        assertThatThrownBy(() -> comicService.delete(99L))
-            .isInstanceOf(ResourceNotFoundException.class)
-            .hasMessageContaining("99");
+        assertThrows(ResourceNotFoundException.class,
+            () -> comicService.delete(99L));
+        verify(comicRepository, never()).deleteById(any());
     }
 
-    // ========== patch() ==========
+    // ─── patch ────────────────────────────────────────────────────────────────
 
     @Test
-    void patch_whenAllFieldsProvided_updatesAll() {
-        ComicPatchRequest request = new ComicPatchRequest("Patched", 2005, 1L, 1L, Set.of(1L));
+    @DisplayName("patch — обновляет только title")
+    void patch_titleOnly() {
+        ComicPatchRequest request = new ComicPatchRequest(
+            "Берсерк: Новая Эра", null, null, null, null);
+        ComicDto patchedDto = new ComicDto(
+            1L, "Берсерк: Новая Эра", 1989,
+            new AuthorDto(1L, "Кэнтаро Миура"),
+            new PublisherDto(1L, "Hakusensha"),
+            Set.of(new GenreDto(1L, "Тёмное фэнтези"))
+        );
 
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
-        when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        noValidationErrors();
+        when(comicRepository.findById(1L)).thenReturn(Optional.of(testComic));
+        when(comicRepository.save(any(Comic.class))).thenReturn(testComic);
+        when(comicMapper.toDto(testComic)).thenReturn(patchedDto);
 
         ComicDto result = comicService.patch(1L, request);
 
-        assertThat(result).isEqualTo(comicDto);
+        assertEquals("Берсерк: Новая Эра", result.title());
         verify(cacheManager).invalidate();
     }
 
     @Test
-    void patch_whenOnlyTitleProvided_updatesOnlyTitle() {
-        ComicPatchRequest request = new ComicPatchRequest("New Title", null, null, null, null);
+    @DisplayName("patch — обновляет authorId")
+    void patch_authorId() {
+        Author newAuthor = new Author();
+        newAuthor.setId(2L);
+        newAuthor.setName("Другой Автор");
 
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        ComicPatchRequest request = new ComicPatchRequest(
+            "Берсерк", null, 2L, null, null);
 
-        ComicDto result = comicService.patch(1L, request);
+        noValidationErrors();
+        when(comicRepository.findById(1L)).thenReturn(Optional.of(testComic));
+        when(authorRepository.existsById(2L)).thenReturn(true);
+        when(authorRepository.getReferenceById(2L)).thenReturn(newAuthor);
+        when(comicRepository.save(any(Comic.class))).thenReturn(testComic);
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
-        assertThat(result).isEqualTo(comicDto);
-        assertThat(comic.getTitle()).isEqualTo("New Title");
-        verify(authorRepository, never()).existsById(any());
-        verify(publisherRepository, never()).existsById(any());
-        verify(genreRepository, never()).findAllById(any());
+        comicService.patch(1L, request);
+
+        verify(authorRepository).getReferenceById(2L);
+        verify(cacheManager).invalidate();
     }
 
     @Test
-    void patch_whenOnlyReleaseYearProvided_updatesOnlyYear() {
-        ComicPatchRequest request = new ComicPatchRequest(null, 2010, null, null, null);
+    @DisplayName("patch — обновляет genreIds")
+    void patch_genreIds() {
+        Genre newGenre = new Genre();
+        newGenre.setId(2L);
+        newGenre.setName("Экшн");
 
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
+        ComicPatchRequest request = new ComicPatchRequest(
+            "Берсерк", null, null, null, Set.of(2L));
 
-        ComicDto result = comicService.patch(1L, request);
+        noValidationErrors();
+        when(comicRepository.findById(1L)).thenReturn(Optional.of(testComic));
+        when(genreRepository.findAllById(Set.of(2L))).thenReturn(List.of(newGenre));
+        when(comicRepository.save(any(Comic.class))).thenReturn(testComic);
+        when(comicMapper.toDto(testComic)).thenReturn(testComicDto);
 
-        assertThat(result).isEqualTo(comicDto);
-        assertThat(comic.getReleaseYear()).isEqualTo(2010);
+        comicService.patch(1L, request);
+
+        verify(genreRepository).findAllById(Set.of(2L));
+        verify(cacheManager).invalidate();
     }
 
     @Test
-    void patch_whenAuthorIdProvided_andAuthorFound_setsAuthor() {
-        ComicPatchRequest request = new ComicPatchRequest(null, null, 1L, null, null);
-
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(authorRepository.existsById(1L)).thenReturn(true);
-        when(authorRepository.getReferenceById(1L)).thenReturn(author);
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
-
-        ComicDto result = comicService.patch(1L, request);
-
-        assertThat(result).isEqualTo(comicDto);
-        verify(authorRepository).existsById(1L);
-    }
-
-    @Test
-    void patch_whenPublisherIdProvided_andPublisherFound_setsPublisher() {
-        ComicPatchRequest request = new ComicPatchRequest(null, null, null, 1L, null);
-
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(publisherRepository.existsById(1L)).thenReturn(true);
-        when(publisherRepository.getReferenceById(1L)).thenReturn(publisher);
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
-
-        ComicDto result = comicService.patch(1L, request);
-
-        assertThat(result).isEqualTo(comicDto);
-        verify(publisherRepository).existsById(1L);
-    }
-
-    @Test
-    void patch_whenGenreIdsProvided_andGenresFound_setsGenres() {
-        ComicPatchRequest request = new ComicPatchRequest(null, null, null, null, Set.of(1L));
-
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(genreRepository.findAllById(Set.of(1L))).thenReturn(List.of(genre));
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
-
-        ComicDto result = comicService.patch(1L, request);
-
-        assertThat(result).isEqualTo(comicDto);
-        verify(genreRepository).findAllById(Set.of(1L));
-    }
-
-    @Test
-    void patch_whenGenreIdsEmptySet_doesNotCallGenreRepository() {
-        // extractGenreIds для ComicPatchRequest возвращает пустой Set
-        // validateGenres: genreIds.isEmpty() → return Optional.empty()
-        ComicPatchRequest request = new ComicPatchRequest("Title", 2000, null, null,
-            Collections.emptySet());
-
-        when(comicRepository.findById(1L)).thenReturn(Optional.of(comic));
-        when(validator.validate(any())).thenReturn(Collections.emptySet());
-        when(comicRepository.save(any(Comic.class))).thenReturn(comic);
-        when(comicMapper.toDto(comic)).thenReturn(comicDto);
-
-        ComicDto result = comicService.patch(1L, request);
-
-        assertThat(result).isNotNull();
-        // genreIds != null но isEmpty() → validateGenres возвращает empty
-        // genreIds != null → resolved.genres().ifPresent(...) вызывается но Optional.empty()
-        verify(genreRepository, never()).findAllById(any());
-    }
-
-    @Test
-    void patch_whenComicNotFound_throwsException() {
+    @DisplayName("patch — комикс не найден")
+    void patch_comicNotFound() {
+        ComicPatchRequest request = new ComicPatchRequest(
+            "Берсерк", null, null, null, null);
         when(comicRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> comicService.patch(99L,
-            new ComicPatchRequest(null, null, null, null, null)))
-            .isInstanceOf(ResourceNotFoundException.class);
+        assertThrows(ResourceNotFoundException.class,
+            () -> comicService.patch(99L, request));
+    }
+
+    @Test
+    @DisplayName("patch — автор не найден, бросает ValidationException")
+    void patch_authorNotFound_throwsValidation() {
+        ComicPatchRequest request = new ComicPatchRequest(
+            "Берсерк", null, 99L, null, null);
+
+        noValidationErrors();
+        when(comicRepository.findById(1L)).thenReturn(Optional.of(testComic));
+        when(authorRepository.existsById(99L)).thenReturn(false);
+
+        assertThrows(ValidationException.class,
+            () -> comicService.patch(1L, request));
+        verify(comicRepository, never()).save(any());
     }
 }
